--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
   "license": "CC0-1.0",
   "postinstall": "install-app-deps",
   "devDependencies": {
-    "electron": "^1.6.11",
+    "electron": "^1.7.5",
     "electron-builder": "^18.0.1"
   },
   "dependencies": {
     "electron-settings": "^3.1.1",
     "fs": "0.0.1-security",
-    "jquery": "^3.1.1",
-    "jsdom": "^9.11.0",
-    "nedb": "^1.8.0",
+    "jquery": "^3.2.1",
+    "markpress": "^4.0.0",
+    "npm": "^5.3.0",
     "xel": "0.0.48"
   },
   "build": {
