--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-builder": "^18.0.1"
   },
   "dependencies": {
+    "decompress-zip": "^0.3.0",
     "electron-settings": "^3.1.1",
     "fs": "0.0.1-security",
     "jquery": "^3.2.1",
