--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "decompress-zip": "^0.3.0",
     "electron-settings": "^3.1.1",
     "fs": "0.0.1-security",
+    "i18n-2": "^0.7.1",
     "jquery": "^3.2.1",
     "markpress": "^4.0.0",
+    "mousetrap": "^1.6.1",
     "mustache": "^2.3.0",
     "npm": "^5.3.0",
     "xel": "0.0.48"
