--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "turban-player",
-  "version": "0.8",
+  "version": "0.8.0",
   "description": "Turban Quiz Player App",
   "main": "main.js",
   "scripts": {
@@ -36,12 +36,12 @@
   },
   "build": {
     "productName": "Game of Worlds Admin",
-    "appId": "com.electron.MatejMosko.GameofWorlds",
-    "asar": true,
+    "appId": "com.electron.MatejMosko.impressPlayer",
+    "asar": false,
     "compression": "maximum",
     "linux": {
       "target": "AppImage",
-      "category": "Game"
+      "category": "Office"
     },
     "win": {
       "target": "NSIS",
