--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "impressPlayer",
   "version": "0.8.0",
-  "description": "Turban Quiz Player App",
+  "description": "Standalone impress.js presentations viewer and controller. Accepts html, markdown and specifically structured zip.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -11,9 +11,10 @@
   },
   "repository": "https://github.com/matejmosko/gow",
   "keywords": [
-    "Game of Worlds",
-    "Board game",
-    "Game"
+    "impressPlayer",
+    "impress.js",
+    "markpress",
+    "presentations"
   ],
   "author": "Matej Moško",
   "license": "CC0-1.0",
@@ -35,7 +36,7 @@
     "xel": "0.0.48"
   },
   "build": {
-    "productName": "Game of Worlds Admin",
+    "productName": "impress Player",
     "appId": "com.electron.MatejMosko.impressPlayer",
     "asar": true,
     "compression": "maximum",
