--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "electron .",
     "pack": "build --dir",
     "dist": "build",
-    "win": "build --win"
+    "win": "build --win",
+    "electron-builder": "electron-builder"
   },
   "repository": "https://github.com/matejmosko/gow",
   "keywords": [
@@ -18,34 +19,35 @@
   ],
   "author": "Matej Moško",
   "license": "CC0-1.0",
-  "postinstall": "install-app-deps",
+  "postinstall": "electron-builder install-app-deps",
   "devDependencies": {
-    "electron": "^1.7.5",
-    "electron-builder": "^18.0.1"
+    "electron": "^1.7.6",
+    "electron-builder": "^18.0.1",
+    "electron-rebuild": "^1.6.0"
   },
   "dependencies": {
     "decompress-zip": "^0.3.0",
     "electron-settings": "^3.1.1",
     "fs": "0.0.1-security",
     "i18n-2": "^0.7.1",
-    "jquery": "^3.2.1",
     "markpress": "^4.0.0",
     "mousetrap": "^1.6.1",
     "mustache": "^2.3.0",
-    "npm": "^5.3.0",
     "xel": "0.0.48"
   },
   "build": {
     "productName": "impress Player",
     "appId": "com.electron.MatejMosko.impressPlayer",
     "asar": true,
-    "compression": "maximum",
+    "compression": "store",
+    "npmRebuild": true,
+    "nodeGypRebuild": false,
     "linux": {
       "target": "AppImage",
       "category": "Office"
     },
     "win": {
-      "target": "NSIS",
+      "target": "portable",
       "icon": "build/icon.ico"
     }
   }
