--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "impressPlayer",
-  "version": "0.8.2",
+  "version": "0.8.3",
   "description": "Standalone impress.js presentations viewer and controller. Accepts html, markdown and specifically structured zip.",
   "main": "main.js",
   "scripts": {
@@ -21,8 +21,8 @@
   "license": "CC0-1.0",
   "postinstall": "install-app-deps",
   "devDependencies": {
-    "electron": "^1.7.6",
-    "electron-builder": "^18.0.1",
+    "electron": "^3.1.1",
+    "electron-builder": "^20.38.5",
     "electron-rebuild": "^1.6.0"
   },
   "dependencies": {
@@ -33,7 +33,10 @@
     "markpress": "^4.0.0",
     "mousetrap": "^1.6.1",
     "mustache": "^2.3.0",
-    "xel": "0.0.48"
+    "npm": "^6.6.0",
+    "npm-check-updates": "^2.15.0",
+    "oniguruma": "^7.0.2",
+    "xel": "0.0.193"
   },
   "build": {
     "productName": "impress Player",
