--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
   "postinstall": "electron-builder install-app-deps",
   "devDependencies": {
     "electron": "^3.1.1",
-    "electron-builder": "^20.38.5"
+    "electron-builder": "^20.38.5",
+    "electron-rebuild": "^1.8.4"
   },
   "dependencies": {
     "decompress-zip": "^0.3.0",
+    "electron-link": "^0.3.3",
     "electron-settings": "^3.1.1",
     "i18n-2": "^0.7.1",
     "markpress": "^4.0.0",
     "mousetrap": "^1.6.1",
     "mustache": "^2.3.0",
+    "npm": "^6.6.0",
     "oniguruma": "^7.0.2",
-    "xel": "0.0.193",
-    "npm": "^6.6.0"
+    "xel": "0.0.193"
   },
   "build": {
     "productName": "impressPlayer",
