--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "license": "CC0-1.0",
   "postinstall": "electron-builder install-app-deps",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "electron": "^3.1.1",
     "electron-builder": "^20.38.5",
     "electron-rebuild": "^1.8.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "decompress-zip": "^0.3.0",
     "electron-settings": "^3.1.1",
     "i18n-2": "^0.7.1",
@@ -33,8 +37,7 @@
     "mousetrap": "^1.6.1",
     "mustache": "^2.3.0",
     "npm": "^6.6.0",
-    "oniguruma": "^7.0.2",
-    "xel": "0.0.193"
+    "oniguruma": "^7.0.2"
   },
   "build": {
     "productName": "impressPlayer",
