--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "decompress-zip": "^0.3.0",
     "electron-settings": "^3.1.1",
+    "fs-plus": "^3.1.1",
+    "highlights": "^3.1.1",
     "i18n-2": "^0.7.1",
     "markpress": "^4.0.0",
+    "marky-markdown": "^12.0.0",
     "mousetrap": "^1.6.1",
     "mustache": "^2.3.0",
     "npm": "^6.6.0",
