--- a/package.json
+++ b/package.json
@@ -19,18 +19,21 @@
   ],
   "author": "Matej Moško",
   "license": "CC0-1.0",
-  "postinstall": "electron-builder install-app-deps",
+  "postinstall": "./node_modules/.bin/electron-rebuild",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
-    "electron": "^5.0.1",
-    "electron-builder": "^20.38.5",
-    "electron-rebuild": "^1.8.4"
+    "electron": "5.0.1",
+    "electron-builder": "^20.39.0",
+    "electron-rebuild": "^1.8.4",
+    "node": "^12.1.0",
+    "npm": "^6.6.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
     "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "decompress-zip": "^0.3.0",
+    "decompress-zip": "^0.2.2",
+    "electron-link": "^0.4.0",
     "electron-settings": "^3.1.1",
     "fs-plus": "^3.1.1",
     "highlights": "^3.1.1",
@@ -38,8 +41,7 @@
     "markpress": "^4.0.0",
     "marky-markdown": "^12.0.0",
     "mousetrap": "^1.6.1",
-    "mustache": "^2.3.0",
-    "npm": "^6.6.0"
+    "mustache": "^2.3.0"
   },
   "build": {
     "productName": "impressPlayer",
