--- a/package.json
+++ b/package.json
@@ -35,10 +35,8 @@
     "decompress-zip": "^0.2.2",
     "electron-settings": "^3.1.1",
     "fs-plus": "^3.1.1",
-    "highlights": "^3.1.1",
     "i18n-2": "^0.7.1",
-    "markpress": "^4.0.0",
-    "marky-markdown": "^12.0.0",
+    "markdown-it": "^10.0.0",
     "mustache": "^2.3.0"
   },
   "build": {
